test/01-whoami.yml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
apiVersion: v1
kind: Service
metadata:
 name: whoami
 namespace: whoami
spec:
 ports:
   - name: web
     port: 80
     targetPort: web
 selector:
   app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: whoami
 namespace: whoami
spec:
 selector:
   matchLabels:
     app: whoami
 template:
   metadata:
     labels:
       app: whoami
   spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
