test/02-whoami-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: whoami-ingress
#   namespace: whoami
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
# spec:
#   rules:
#   - host: whoami.cklein.us
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: whoami
#             port:
#               name: web
#   - host: whoami.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: whoami
#             port:
#               name: web

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`whoami.local`)
    services:
    - name: whoami
      port: 80
  - kind: Rule
    match: Host(`whoami.cklein.us`)
    services:
    - name: whoami
      port: 80
