test/03-whoami-cert.yml
apiVersion: cert-manager.io/v1
kind: ClusterIssuer
metadata:
 name: ca-issuer
 namespace: whoami
spec:
 acme:
   email: cklein70@gmail.com
   # We use the staging server here for testing to avoid hitting
   server: https://acme-staging-v02.api.letsencrypt.org/directory
  #  server: production: https://acme-v02.api.letsencrypt.org/directory
   privateKeySecretRef:
     # if not existing, it will register a new account and stores it
     name: cklein-issuer-account-key
   solvers:
     - http01:
         # The ingressClass used to create the necessary ingress routes
         ingress:
           class: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whoami
 namespace: whoami
 annotations:
   cert-manager.io/cluster-issuer: "ca-issuer"
spec:
 tls:
   - hosts:
       - whoami.cklein.us
     secretName: tls-whoami-ingress-http
 rules:
   - host: whoami.cklein.us
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: whoami
               port:
                 name: web
